--- a/style.css
+++ b/style.css
@@ -4,6 +4,35 @@
     font-family: Lato;
 }
 
+.title {
+    color: #272727;
+    font-size: 30px;
+    font-weight: bolder;
+    width: 400px;
+    text-align: center;
+}
+
+.txt {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    padding-top: 24px;
+}
+
+.btn-main {
+    border-radius: 8px;
+    background: #E55473;
+    color: white;
+    border-color: #E55473;
+    border-style: none;
+    padding: 20px 43px;
+    gap: 10px;
+    margin-top: 30px;
+}
+
+/* Banner styles */
 .banner-container {
     background: #e554731a;
     display: flex;
@@ -37,17 +66,6 @@
     flex-shrink: 0;
 }
 
-.btn-main {
-    border-radius: 8px;
-    background: #E55473;
-    color: white;
-    border-color: #E55473;
-    border-style: none;
-    padding: 20px 43px;
-    gap: 10px;
-    margin-top: 30px;
-}
-
 .banner-img {
     margin-bottom: 0px;
     padding-right: 240px;
@@ -55,4 +73,151 @@
     height: 700px;
     padding-top: 50px;
     background: no-repeat;
+}
+
+/* Feature styles */
+.feature-title {
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    padding-top: 100px;
+}
+
+.feature-txt {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    padding-top: 24px;
+}
+
+.feature-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 50px;
+    padding-left: 240px;
+    padding-right: 240px;
+    /* position: relative; */
+}
+
+#feature1 {
+    background-color: #A7216226;
+    border-radius: 300px 300px 0px 0px;
+    margin: 10px;
+    width: 300px;
+    height: 400px;
+    /* position: absolute; */
+}
+#feature2 {
+    background-color: #0597A026;
+    border-radius: 300px 300px 0px 0px;
+    margin: 10px;
+    width: 300px;
+    height: 400px;
+    /* position: absolute; */
+}
+#feature3 {
+    background-color: #477D1126;
+    border-radius: 300px 300px 0px 0px;
+    margin: 10px;
+    width: 300px;
+    height: 400px;
+    /* position: absolute; */
+}
+
+.feature-img {
+    width: 200px;
+    height: 300px;
+    padding: 100px 50px 0px 50px;
+}
+
+.feature-cap {
+    color: #272727;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 35px;
+    text-decoration-line: underline;
+    margin-top: 10px;
+}
+
+/* Service styles */
+.service-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    background: rgba(39, 39, 39, 0.05);
+    margin-left: 240px;
+    margin-right: 240px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    height: 220px;
+    text-align: center;
+}
+#service1{
+    padding-left: 120px;
+}
+#service2{
+    padding-right: 120px;
+}
+.service-icon {
+    height: 50px;
+    width: 50px;
+}
+
+.service-txt {
+    color: rgba(39, 39, 39, 0.80);
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 35px;
+}
+
+/* Deal styles */
+.deal-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #E554730D;
+    padding-left: 200px;
+    padding-right: 200px;
+}
+
+.deal-description {
+    text-align: center;
+    padding-top: 230px;
+    padding-bottom: 162px;
+}
+
+.deal-title {
+    color: #272727;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.deal-txt {
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    padding-top: 24px;
+}
+
+.deal-img {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+/* Instagram section */
+.insta-container{
+    align-items: center;
+}
+.insta-img{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 100px;
 }
