--- a/style.css
+++ b/style.css
@@ -5,11 +5,10 @@
 }
 
 .title {
-    color: #272727;
-    font-size: 30px;
     font-weight: bolder;
-    width: 400px;
     text-align: center;
+    color: #272727;
+    font-size: 40px;
 }
 
 .txt {
@@ -54,18 +53,6 @@
     width: 400px;
 }
 
-.banner-txt {
-    color: rgba(39, 39, 39, 0.60);
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
-    padding-top: 30px;
-    display: flex;
-    /* width: 634px; */
-    flex-direction: column;
-    flex-shrink: 0;
-}
-
 .banner-img {
     margin-bottom: 0px;
     padding-right: 240px;
@@ -76,24 +63,11 @@
 }
 
 /* Feature styles */
-.feature-title {
-    color: #272727;
-    text-align: center;
-    font-size: 40px;
-    font-weight: 800;
+.feature-container {
     padding-top: 100px;
 }
 
-.feature-txt {
-    color: rgba(39, 39, 39, 0.60);
-    text-align: center;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
-    padding-top: 24px;
-}
-
-.feature-container {
+.features {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -111,6 +85,7 @@
     height: 400px;
     /* position: absolute; */
 }
+
 #feature2 {
     background-color: #0597A026;
     border-radius: 300px 300px 0px 0px;
@@ -119,6 +94,7 @@
     height: 400px;
     /* position: absolute; */
 }
+
 #feature3 {
     background-color: #477D1126;
     border-radius: 300px 300px 0px 0px;
@@ -158,12 +134,15 @@
     height: 220px;
     text-align: center;
 }
-#service1{
+
+#service1 {
     padding-left: 120px;
 }
-#service2{
+
+#service2 {
     padding-right: 120px;
 }
+
 .service-icon {
     height: 50px;
     width: 50px;
@@ -182,8 +161,8 @@
     justify-content: space-between;
     align-items: center;
     background-color: #E554730D;
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: 240px;
+    padding-right: 240px;
 }
 
 .deal-description {
@@ -191,33 +170,28 @@
     padding-top: 230px;
     padding-bottom: 162px;
 }
-
-.deal-title {
-    color: #272727;
-    font-size: 40px;
-    font-weight: 800;
-}
-
-.deal-txt {
-    color: rgba(39, 39, 39, 0.60);
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
-    padding-top: 24px;
-}
-
 .deal-img {
     padding-top: 100px;
     padding-bottom: 100px;
 }
+
 /* Instagram section */
-.insta-container{
-    align-items: center;
+.insta-container {
+    margin-top: 100px;
+    text-align: center;
 }
-.insta-img{
+
+.insta-img-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 50px;
     margin-bottom: 100px;
+    margin-left: 240px;
+    margin-right: 240px;
+}
+
+.insta-img {
+    width: 220px;
+    height: 240px;
 }
