--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     font-weight: bolder;
     text-align: center;
     color: #272727;
-    font-size: 40px;
+    font-size: 34px;
 }
 
 .txt {
@@ -74,7 +74,6 @@
     padding-top: 50px;
     padding-left: 240px;
     padding-right: 240px;
-    /* position: relative; */
 }
 
 #feature1 {
@@ -83,7 +82,6 @@
     margin: 10px;
     width: 300px;
     height: 400px;
-    /* position: absolute; */
 }
 
 #feature2 {
@@ -92,7 +90,6 @@
     margin: 10px;
     width: 300px;
     height: 400px;
-    /* position: absolute; */
 }
 
 #feature3 {
@@ -101,7 +98,6 @@
     margin: 10px;
     width: 300px;
     height: 400px;
-    /* position: absolute; */
 }
 
 .feature-img {
@@ -161,8 +157,8 @@
     justify-content: space-between;
     align-items: center;
     background-color: #E554730D;
-    padding-left: 240px;
-    padding-right: 240px;
+    padding-left: 250px;
+    padding-right: 250px;
 }
 
 .deal-description {
@@ -170,6 +166,7 @@
     padding-top: 230px;
     padding-bottom: 162px;
 }
+
 .deal-img {
     padding-top: 100px;
     padding-bottom: 100px;
@@ -194,4 +191,31 @@
 .insta-img {
     width: 220px;
     height: 240px;
+}
+
+/* Subscribe styles */
+.subscribe-container{
+    background-image: url(/images/rectangle\ 9.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 300px;
+    margin-left: 240px;
+    margin-right: 240px;
+    margin-bottom: 100px;
+}
+.subscribe{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 180px;
+    padding-right: 180px;
+}
+.subscribe-txt-field {
+    border-radius: 8px;
+    border-style: none;
+    background: #FFF;
+    width: 430px;
+    height: 56px;
+    padding-left: 25px;
+    margin-right: 10px;
 }
