--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     padding: 0px;
     font-family: Lato;
 }
-
+.color{
+    color: #E55473;
+}
 .title {
     font-weight: bolder;
     text-align: center;
@@ -218,4 +220,9 @@
     height: 56px;
     padding-left: 25px;
     margin-right: 10px;
+}
+/* Footer styles */
+.footer-container{
+    background-color: #e554731a;
+    padding: 100px;
 }
