style image path changed

--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@
 
 /* Subscribe styles */
 .subscribe-container{
-    background-image: url(/images/rectangle\ 9.png);
+    background-image: url(images/rectangle\ 9.png);
     background-repeat: no-repeat;
     background-size: cover;
     height: 400px;
