--- a/style.css
+++ b/style.css
@@ -219,3 +219,94 @@
     background-color: #e554731a;
     padding: 100px;
 }
+@media screen and (max-width:576px) {
+
+    /* Banner styles */
+    .banner-description {
+        padding-top: 20px;
+        padding-bottom: 145px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .banner-title {
+        font-size: 30px;
+        width: 100%;
+    }
+
+    .banner-img {
+        width: 100%;
+        height: 500px;
+        padding: 0px;
+    }
+
+    .features {
+        padding-left: 0px;
+        padding-right: 0px;
+        display: grid;
+        justify-content: center;
+        row-gap: 50px;
+    }
+
+    /* Service styles */
+    .service-container {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    #service1 {
+        padding-left: 20px;
+    }
+
+    #service2 {
+        padding-right: 20px;
+    }
+
+    /* Deal styles */
+    .deal-container {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    /* Instagram section */
+    .insta-container {
+        margin-top: 100px;
+        text-align: center;
+    }
+
+    .insta-img-container {
+        margin-left: 0px;
+        margin-right: 0px;
+        display: grid;
+        justify-content: center;
+        row-gap: 20px;
+    }
+
+    /* Subscribe styles */
+    .subscribe-container {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .subscribe {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    .subscribe-txt-field {
+        border-radius: 8px;
+        border-style: none;
+        background: #FFF;
+        width: 680px;
+        height: 60px;
+        padding-left: 25px;
+        margin-right: 10px;
+    }
+
+    /* Footer styles */
+    .footer-container {
+        background-color: #e554731a;
+        padding: 0px;
+    }
+
+}
